# binary-man

./: Cargo.toml  LICENSE  README.md  flake.nix
docs/: DEV.md  MILESTONES.md  SCHEMAS.md
fixtures/: catalog.json
fixtures/fs/empty_dir/: manifest.json
scenarios/examples/: ls_help.json
schema/: scenario.lm.json  scenario.v0.json
src/: binary.rs  claims.rs  contract.rs  evidence.rs  fixture.rs  hashing.rs  help.rs  limits.rs  lm.rs  main.rs  paths.rs  planner.rs  runner.rs  scenario.rs  schema.rs  transcript.rs  validate.rs
tests/: validate_integration.rs
tests/golden/: ls_claims.json
tools/: commit_template.txt  format_commit.py  lint_commit.py
