[package]
name = "binary-man"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Binary scenario runner"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
hex = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
walkdir = "2.5"
